--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -10,18 +10,27 @@
     "test": "npx cypress verify & cypress run --component"
   },
   "dependencies": {
-    "next": "14.0.4",
+    "@fortawesome/fontawesome-svg-core": "^6.6.0",
+    "@fortawesome/free-brands-svg-icons": "^6.6.0",
+    "@fortawesome/free-regular-svg-icons": "^6.6.0",
+    "@fortawesome/free-solid-svg-icons": "^6.6.0",
+    "@fortawesome/react-fontawesome": "^0.2.2",
+    "cross-env": "^7.0.3",
+    "next": "^14.2.17",
     "react": "^18",
-    "react-dom": "^18",
-    "cross-env": "^7.0.3"
+    "react-cookie": "^7.2.2",
+    "react-dom": "^18"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "autoprefixer": "^10.4.20",
     "cypress": "^13.6.2",
     "eslint": "^8",
     "eslint-config-next": "14.0.4",
+    "postcss": "^8.4.49",
+    "tailwindcss": "^3.4.14",
     "typescript": "^5"
   }
 }
