--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -15,11 +15,16 @@
     "@fortawesome/free-regular-svg-icons": "^6.6.0",
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@reduxjs/toolkit": "^2.3.0",
+    "axios": "^1.7.7",
     "cross-env": "^7.0.3",
+    "formik": "^2.4.6",
     "next": "^14.2.17",
     "react": "^18",
     "react-cookie": "^7.2.2",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-redux": "^9.1.2",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@types/node": "^20",
