--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -19,6 +19,7 @@
     "axios": "^1.7.7",
     "cross-env": "^7.0.3",
     "formik": "^2.4.6",
+    "jwt-decode": "^4.0.0",
     "next": "^14.2.17",
     "react": "^18",
     "react-cookie": "^7.2.2",
