--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "main": "src/server.ts",
   "scripts": {
+    "postinstall": "prisma generate",
     "dev": "nodemon",
     "build": "tsc && tsc-alias",
     "serve": "cross-env NODE_ENV=production node dist/index.js",
