--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -16,8 +16,10 @@
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@reduxjs/toolkit": "^2.3.0",
+    "apexcharts": "^4.1.0",
     "axios": "^1.7.7",
     "cross-env": "^7.0.3",
+    "flowbite": "^2.5.2",
     "formik": "^2.4.6",
     "jwt-decode": "^4.0.0",
     "next": "^14.2.17",
