--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -24,6 +24,7 @@
     "jwt-decode": "^4.0.0",
     "next": "^14.2.17",
     "react": "^18",
+    "react-apexcharts": "^1.6.0",
     "react-cookie": "^7.2.2",
     "react-dom": "^18",
     "react-redux": "^9.1.2",
