--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -16,12 +16,15 @@
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@reduxjs/toolkit": "^2.3.0",
+    "apexcharts": "^4.1.0",
     "axios": "^1.7.7",
     "cross-env": "^7.0.3",
+    "flowbite": "^2.5.2",
     "formik": "^2.4.6",
     "jwt-decode": "^4.0.0",
     "next": "^14.2.17",
     "react": "^18",
+    "react-apexcharts": "^1.6.0",
     "react-cookie": "^7.2.2",
     "react-dom": "^18",
     "react-redux": "^9.1.2",
