--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -28,6 +28,7 @@
     "react-cookie": "^7.2.2",
     "react-dom": "^18",
     "react-redux": "^9.1.2",
+    "sweetalert2": "^11.6.13",
     "yup": "^1.4.0"
   },
   "devDependencies": {
